cambios pre produccion

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ApiUrls": {
-    "ZuvoPetApiAzure": "https://yqqa8f1sjf.execute-api.us-east-1.amazonaws.com/Prod"
+    "ZuvoPetApiAzure": "https://yqqa8f1sjf.execute-api.us-east-1.amazonaws.com/Prod/"
   }
 }
